@@ -4635,6 +4635,8 @@ void ePlayerNetID::RemoveFromGame()
     // log scores
     LogScoreDifference();
 
+    bool logLeave = false;
+
     if ( sn_GetNetState() != nCLIENT )
     {
         nameFromClient_ = nameFromServer_;
@@ -4656,9 +4658,7 @@ void ePlayerNetID::RemoveFromGame()
 
             if ( IsHuman() && sn_GetNetState() == nSERVER && NULL != sn_Connections[Owner()].socket )
             {
-                tString ladder;
-                se_playerLeftWriter << userName_ << nMachine::GetMachine(Owner()).GetIP();
-                se_playerLeftWriter.write();
+                logLeave = true;
             }
         }
     }
@@ -4668,7 +4668,12 @@ void ePlayerNetID::RemoveFromGame()
     SetTeam( NULL );
     UpdateTeam();
     ControlObject( NULL );
-    // currentTeam = NULL;
+
+    if( logLeave )
+    {
+        se_playerLeftWriter << userName_ << nMachine::GetMachine(Owner()).GetIP();
+        se_playerLeftWriter.write();
+    }
 }
 
 bool ePlayerNetID::ActionOnQuit()
